# opengeo

./: .codeclimate.yml  .dockerignore  .gitignore  .gitlab-ci.yml  .gitmodules  Dockerfile  Dockerfile.base  Dockerfile.complete  Dockerfile.complete.dockerignore  README.md  dataset.tiff  docker-compose.complete.yml  docker-compose.yml  gdal-setup.py  manage.py  pyproject.toml
config/: config.production.yml  config.yml
opengeo/: admin.py  apps.py  asgi.py  graphql_socket_consumer.py  middleware.py  models.py  serializers.py  views.py
opengeo-project/: asgi.py  settings.py  urls.py  wsgi.py
opengeo/migrations/: 0001_initial.py  0002_auto_20210603_0114.py
opengeo/schema/: mutation.py  object_types.py  query.py  schema.py  subscription.py  utils.py
